# Hackathon2-phase-II

./: .env.example  .gitignore  README.md  requirements.txt
.claude/: settings.local.json
.github/workflows/: test.yml
backend/: README.md  pyproject.toml  test_db_connection.py
backend/src/api/: main.py
backend/src/api/routes/: auth.py  tasks.py
backend/src/auth/: dependencies.py  middleware.py  utils.py
backend/src/config/: settings.py
backend/src/database/: session.py
backend/src/models/: task.py  user.py
backend/tests/: test_auth.py  test_auth_middleware.py  test_auth_utils.py
frontend/: Dockerfile.dev  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: Header.tsx  Providers.tsx
frontend/components/auth/: AuthGuard.tsx  SignInForm.tsx  SignUpForm.tsx
frontend/components/tasks/: DeleteConfirm.tsx  EmptyState.tsx  TaskCard.tsx  TaskForm.tsx  (+2 more)
frontend/hooks/: useAuth.tsx  useTasks.ts  useToast.tsx
frontend/types/: index.ts
specs/001-backend-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-security/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-api-ownership/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/integration/: test_tasks_api.py
tests/unit/: test_main.py
(+35 files in other folders)
